Fixed the spacing in AddClass component

--- a/src/components/ClassCard/ClassCard.css
+++ b/src/components/ClassCard/ClassCard.css
@@ -12,7 +12,7 @@
 }
 
 .classCard{
-   width: 300px;
+   width: auto;
    margin: 20px;
 }
 
